<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.xmarcusv.moviex.ui.list.MovieViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:background="?android:attr/windowBackground"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:menu="@menu/navigation" />

            <!--Popular-->
            <TextView
                android:id="@+id/popular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_popular"
                android:textColor="@color/title"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <View
                android:id="@+id/popular_line"
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@id/popular_text"
                app:layout_constraintTop_toBottomOf="@id/popular_text" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/popular_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/poster_height"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popular_line"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_row" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/poster_height"
                android:visibility="@{viewModel.mostPopularLoadingVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popular_line" />

            <!--Top Rated-->
            <TextView
                android:id="@+id/top_rated_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_top_rated"
                android:textColor="@color/title"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_list" />

            <View
                android:id="@+id/top_rated_line"
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@id/top_rated_text"
                app:layout_constraintTop_toBottomOf="@id/top_rated_text" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/top_rated_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/poster_height"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_rated_line"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_row" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/poster_height"
                android:visibility="@{viewModel.topRatedLoadingVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_rated_line" />

            <!--Upcomming-->
            <TextView
                android:id="@+id/upcoming_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_upcoming"
                android:textColor="@color/title"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_rated_list" />

            <View
                android:id="@+id/upcoming_line"
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@id/upcoming_text"
                app:layout_constraintTop_toBottomOf="@id/upcoming_text" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/upcoming_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/poster_height"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_line"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/movie_row" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/poster_height"
                android:visibility="@{viewModel.upcomingLoadingVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_line" />

            <!--Toolbar-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:theme="@style/AppTheme">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </android.support.v7.widget.Toolbar>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
